<?xml version="1.0" ?>
<package>
	<name>asr_flock_of_birds_tracking</name>
	<version>1.0.0</version>
	<description>This package controls a motorized robot head (a sensor setup equipped with a PTU) in order to ensure that the hand of a human user remains inside its field of view. The human hand is tracked with the help of an Ascension - Flock of Birds system. The purpose of this package is to enable continuous localization of objects during their manipulation through the tracked hand.</description>
        
	<author>Engelmann Stephan, Heller Florian, Meißner Pascal, Stöckle Patrick, Wittenbeck Valerij</author>
	<maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
	<license>BSD</license>
	<url type="website">http://wiki.ros.org/asr_flock_of_birds_tracking</url>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>asr_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tf</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>asr_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>tf</run_depend>
        <run_depend>asr_flir_ptu_driver</run_depend>
        <run_depend>asr_flock_of_birds</run_depend>

</package>
